force-app/main/default/objects/LPCR_LeadConversionRTMapping__mdt/LPCR_LeadConversionRTMapping__mdt.object-meta.xml
<CustomObject>
    <label>LPCR_LeadConversionRTMapping</label>
    <pluralLabel>LPCR_LeadConversionRTMappings</pluralLabel>
</CustomObject>