force-app/main/default/objects/LPCR_LeadConversionRTMapping__mdt/fields/LPCR_AccountRT__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AccountRT__c</fullName>
    <label>LPCR_AccountRT</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>