force-app/main/default/objects/LPCR_LeadConversionRTMapping__mdt/fields/LPCR_LeadRT__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LeadRT__c</fullName>
    <label>LPCR_LeadRT</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>